--- a/semister5/index.html
+++ b/semister5/index.html
@@ -121,8 +121,9 @@ function removememe() {
         <div class="row justify-content-center">
             <div class="col-12">
                 <img id="meme_img" class="img-fluid rounded" alt="Meme Image">
-            </div>
-            <div class="col-12 mt-3">
+                <center>Join our WhatsApp Group <br>Scan the QR code or <br> Contact +916207753704</center>
+            </div><br><br>
+            <div class="col-12" style="margin-top: 4rem;">
                 <button class="btn btn-danger" onclick="removememe()">Close</button>
             </div>
         </div>
