--- a/NPTEL/index.html
+++ b/NPTEL/index.html
@@ -45,7 +45,7 @@
       
       
   </div>
-  <div class="semister">AI : Search Methods...</div>
+  <div class="semester">AI : Search Methods...</div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" id="upper_menu_btn" data-bs-target="#collapsibleNavbar">
         <i class="fa fa-arrow-down" aria-hidden="true"></i>
       </button>
@@ -53,16 +53,16 @@
         <ul class="nav nav-pills navbar-nav ms-auto" id="myNav">
           <!-- 1st Year -->
           <li class="nav-item">
-            <a class="nav-link" href="../semister1/index.html">1st Year</a>
+            <a class="nav-link" href="../semester1/index.html">1st Year</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../semister3/index.html">2nd Year</a>
+            <a class="nav-link" href="../semester3/index.html">2nd Year</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../semister5/index.html">3rd Year</a>
+            <a class="nav-link" href="../semester5/index.html">3rd Year</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../semister7/index.html">4th Year</a>
+            <a class="nav-link" href="../semester7/index.html">4th Year</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../NPTEL/index.html">NPTEL</a>
