--- a/login.html
+++ b/login.html
@@ -182,16 +182,16 @@
     function redirectToYearPage(year) {
         switch (parseInt(year)) {
             case 1:
-                window.location = "semister1/index.html";
+                window.location = "semester1/index.html";
                 break;
             case 2:
-                window.location = "semister3/index.html";
+                window.location = "semester3/index.html";
                 break;
             case 3:
-                window.location = "semister5/index.html";
+                window.location = "semester5/index.html";
                 break;
             case 4:
-                window.location = "semister7/index.html";
+                window.location = "semester7/index.html";
                 break;
             default:
                 console.error('Invalid year:', year);
