--- a/semester5/index.html
+++ b/semester5/index.html
@@ -122,7 +122,7 @@ function removememe() {
             <div class="col-12">
                 <img id="meme_img" class="img-fluid rounded" alt="Meme Image">
                 
-            </div><br><br>
+            </div><br><center style="font-size: larger;">Meme of the Day</center><br>
             <div class="col-12 mt-4" >
                 <button class="btn btn-danger" onclick="removememe()">Close</button>
             </div>
