--- a/semester5/ai.html
+++ b/semester5/ai.html
@@ -94,9 +94,24 @@
       <p>The Turing Test is a concept proposed by the British mathematician and computer scientist Alan Turing in 1950 to determine whether a machine can exhibit intelligent behavior indistinguishable from that of a human.</p> <h3>Classic Setup of the Turing Test</h3> <ul> <li>There are three participants: <ul> <li>A human evaluator</li> <li>A human respondent</li> <li>A machine respondent (AI)</li> </ul> </li> <li>The evaluator communicates with both the human and the machine through a computer interface, so they cannot see or hear either of them.</li> <li>The evaluator's task is to determine which participant is the human and which is the machine based solely on their responses to questions or tasks.</li> <li>If the evaluator cannot reliably distinguish the machine from the human, then the machine is said to have passed the Turing Test and can be considered to exhibit "intelligent" behavior.</li> </ul>
         <h4><strong>
           2) 12-9-7 Water jug problem
-        </strong></h4>
-<h2>The 12-9-7 Water Jug Problem</h2> <p>The 12-9-7 water jug problem is a classic example of a puzzle where you need to measure out a specific amount of water using only the jugs available.</p> <h3>Problem Statement</h3> <p>You have three jugs:</p> <ul> <li>A 12-liter jug</li> <li>A 9-liter jug</li> <li>A 7-liter jug</li> </ul> <p>Your goal is to measure exactly 6 liters of water using these jugs.</p> <h3>Example Solution</h3> <p>Here's one way to solve the problem:</p> <p>Step 1: Fill the 12-liter jug completely.</p> <ul> <li>12-liter jug: 12 liters</li> <li>9-liter jug: 0 liters</li> <li>7-liter jug: 0 liters</li> </ul> <p>Step 2: Pour water from the 12-liter jug into the 9-liter jug until the 9-liter jug is full.</p> <ul> <li>12-liter jug: 3 liters (12 - 9)</li> <li>9-liter jug: 9 liters</li> <li>7-liter jug: 0 liters</li> </ul> <p>Step 3: Pour water from the 9-liter jug into the 7-liter jug until the 7-liter jug is full.</p> <ul> <li>12-liter jug: 3 liters</li> <li>9-liter jug: 2 liters (9 - 7)</li> <li>7-liter jug: 7 liters</li> </ul> <p>Step 4: Empty the 7-liter jug.</p> <ul> <li>12-liter jug: 3 liters</li> <li>9-liter jug: 2 liters</li> <li>7-liter jug: 0 liters</li> </ul> <p>Step 5: Pour the remaining 2 liters from the 9-liter jug into the 7-liter jug.</p> <ul> <li>12-liter jug: 3 liters</li> <li>9-liter jug: 0 liters</li> <li>7-liter jug: 2 liters</li> </ul> <p>Step 6: Fill the 9-liter jug completely again.</p> <ul> <li>12-liter jug: 3 liters</li> <li>9-liter jug: 9 liters</li> <li>7-liter jug: 2 liters</li> </ul> <p>Step 7: Pour water from the 9-liter jug into the 7-liter jug until the 7-liter jug is full.</p> <ul> <li>12-liter jug: 3 liters</li> <li>9-liter jug: 7 liters (9 - 2)</li> <li>7-liter jug: 7 liters</li> </ul> <p>Step 8: The remaining water in the 9-liter jug is exactly 6 liters.</p> <ul> <li>12-liter jug: 3 liters</li> <li>9-liter jug: 6 liters</li> <li>7-liter jug: 7 liters</li> </ul> <h3>Summary</h3> <p>By following these steps, you have measured out exactly 6 liters of water using the 12-liter, 9-liter, and 7-liter jugs. The key to solving these types of problems is to carefully plan each step to ensure that you reach the desired measurement using the given resources.</p>
-
+        </strong></h4><ol>
+          <li class="step">Initial State: <span class="state">(0, 0, 0)</span></li>
+          <li class="step">Fill Jug C (7L): <span class="state">(0, 0, 7)</span></li>
+          <li class="step">Pour from Jug C to Jug B: <span class="state">(0, 7, 0)</span></li>
+          <li class="step">Fill Jug C (7L): <span class="state">(0, 7, 7)</span></li>
+          <li class="step">Pour from Jug C to Jug B until Jug B is full (9L): <span class="state">(0, 9, 5)</span></li>
+          <li class="step">Empty Jug B: <span class="state">(0, 0, 5)</span></li>
+          <li class="step">Pour from Jug C to Jug B: <span class="state">(0, 5, 0)</span></li>
+          <li class="step">Fill Jug C (7L): <span class="state">(0, 5, 7)</span></li>
+          <li class="step">Pour from Jug C to Jug B until Jug B is full (9L): <span class="state">(0, 9, 3)</span></li>
+          <li class="step">Empty Jug B: <span class="state">(0, 0, 3)</span></li>
+          <li class="step">Pour from Jug C to Jug B: <span class="state">(0, 3, 0)</span></li>
+          <li class="step">Fill Jug C (7L): <span class="state">(0, 3, 7)</span></li>
+          <li class="step">Pour from Jug C to Jug B until Jug B is full (9L): <span class="state">(0, 6, 4)</span></li>
+      </ol>
+      
+      <h4 class="goal">Final State: Goal Achieved: (0, 6, 4)</h4>
+      
 <h4><strong>
   3) Define AI and uses of AI.
 </strong></h4>
